# pyHeat1D

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: devel.md  index.md
docs/fontes/: cells_loop.md  controllers.md  errors.md  grid.md  input_files.md  jsonencoder.md  mesh.md  simulation_times.md  solver.md  system.md  writer.md
simulations/: newton.json
src/pyheat1d/: cells_loop.py  cli.py  controllers.py  edp.py  errors.py  grid.py  input_files.py  jsonencoder.py  main.py  mesh.py  simulation_times.py  singleton.py  solver.py  system.py  writer.py
tests/: conftest.py  test_cellloop.py  test_cli.py  test_controllers.py  test_edo.py  test_edp.py  test_grid.py  test_input_files.py  test_jsonencoder.py  test_mesh.py  test_solver.py  test_system.py  test_times.py  test_writer.py
tests/files/input/: newton.json
tests/files/output/: mesh.json  results.json
